--- a/style.css
+++ b/style.css
@@ -307,19 +307,29 @@ body {
   margin-left: 22px;
   background-size: cover;
 }
+#services .party .overlay {
+  display: flex;
+  justify-content: flex-end;
+  align-items: end;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(1, 17, 33, 0.4);
+}
 #services .party .two {
+  z-index: 10;
   -o-object-fit: cover;
      object-fit: cover;
   position: relative;
   height: 8%;
 }
 #services .party p {
+  position: relative;
+  z-index: 1;
   font-weight: 600;
   color: white;
   font-size: 26px;
   font-family: "JosefinSans-Regular";
   right: 99px;
-  position: relative;
 }
 #services .digital {
   flex-direction: column;
@@ -384,6 +394,14 @@ body {
   height: 8%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+#services .overlay {
+  display: flex;
+  justify-content: flex-end;
+  align-items: end;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(1, 17, 33, 0.4);
 }
 
 #clients {
@@ -797,8 +815,6 @@ body {
     margin-bottom: 15px;
   }
   #services .party {
-    display: flex;
-    justify-content: center;
     width: 334px;
     margin-left: 0px;
   }
@@ -809,6 +825,10 @@ body {
   }
   #services .party .two {
     display: none;
+  }
+  #services .party .overlay {
+    display: flex;
+    justify-content: center;
   }
   #services .digital {
     width: 334px;
@@ -831,8 +851,6 @@ body {
     display: none;
   }
   #services .camera {
-    display: flex;
-    justify-content: center;
     margin-top: 10px;
     width: 334px;
     margin-left: 0px;
@@ -844,6 +862,10 @@ body {
   }
   #services .camera img {
     display: none;
+  }
+  #services .camera .overlay {
+    display: flex;
+    justify-content: center;
   }
   #clients {
     margin-top: 40px;
@@ -1208,8 +1230,6 @@ body {
     margin-bottom: 20px;
   }
   #services .party {
-    display: flex;
-    justify-content: center;
     height: 359px;
     width: 233px;
     margin-left: 0px;
@@ -1220,6 +1240,10 @@ body {
   }
   #services .party .two {
     display: none;
+  }
+  #services .party .overlay {
+    display: flex;
+    justify-content: center;
   }
   #services .digital {
     height: 359px;
@@ -1242,8 +1266,6 @@ body {
     display: none;
   }
   #services .camera {
-    display: flex;
-    justify-content: center;
     margin-left: 0px;
     -o-object-fit: cover;
        object-fit: cover;
@@ -1256,6 +1278,10 @@ body {
   }
   #services .camera .two {
     display: none;
+  }
+  #services .camera .overlay {
+    display: flex;
+    justify-content: center;
   }
   #clients {
     margin-top: 100px;
@@ -1591,8 +1617,6 @@ body {
     margin-bottom: 20px;
   }
   #services .party {
-    display: flex;
-    justify-content: center;
     height: 370px;
     width: 240px;
     margin-left: 0px;
@@ -1603,6 +1627,10 @@ body {
   }
   #services .party .two {
     display: none;
+  }
+  #services .party .overlay {
+    display: flex;
+    justify-content: center;
   }
   #services .digital {
     height: 370px;
@@ -1625,8 +1653,6 @@ body {
     display: none;
   }
   #services .camera {
-    display: flex;
-    justify-content: center;
     height: 370px;
     width: 240px;
     margin-left: 0px;
@@ -1637,6 +1663,10 @@ body {
   }
   #services .camera .two {
     display: none;
+  }
+  #services .camera .overlay {
+    display: flex;
+    justify-content: center;
   }
   #clients {
     margin-top: 100px;
