--- a/style.scss
+++ b/style.scss
@@ -353,6 +353,8 @@ p{
    
 }
 
+
+
 #services{
     margin-left: 80px;
     margin-right: 80px;
@@ -383,8 +385,26 @@ img{
     margin-left: 22px;
     background-size: cover;
    
+.overlay{
+   
+    display: flex;
+    justify-content: flex-end;
+    align-items: end;
 
+    // position: relative;
+    
+    width: 100%;
+    height: 100%;
+    background-color:#01112166;
+    // .two{
+    //     object-fit: cover;
+    // position: relative;
+    // height: 8%;
+    
+    // }
+}
     .two{
+        z-index: 10;
         object-fit: cover;
     position: relative;
     height: 8%;
@@ -392,15 +412,19 @@ img{
     }
     
  p{ 
+    position: relative;
+    z-index: 1;
     font-weight: 600;
     color: white;
     font-size: 26px;
     font-family:"JosefinSans-Regular" ;
     right: 99px;
-    position: relative;
+    // position: relative;
     
  }  
 }
+
+
 
 .digital{
 
@@ -471,6 +495,18 @@ p{
     height: 480px;
     width: 352px;
     margin-left: 13px;
+}
+
+.overlay{
+    display: flex;
+    justify-content: flex-end;
+    align-items: end;
+
+    // position: relative;
+    
+    width: 100%;
+    height: 100%;
+    background-color:#01112166; 
 }
 
 }
@@ -961,8 +997,7 @@ position: relative;
         margin-bottom: 15px;
     }
     .party{
-        display: flex;
-        justify-content: center;
+        
         width: 334px;
         margin-left: 0px;
         p{
@@ -973,6 +1008,11 @@ margin-bottom: 10px;
        
             .two{
                 display: none;
+            }
+
+            .overlay{
+                display: flex;
+                justify-content: center;
             }
         
     }
@@ -1000,8 +1040,7 @@ margin-bottom: 10px;
 
     }
     .camera{
-        display: flex;
-        justify-content: center;
+    
         margin-top: 10px;
         p{
             margin-bottom: 10px;
@@ -1012,6 +1051,11 @@ margin-bottom: 10px;
         margin-left: 0px;
         img{
             display: none;
+        }
+
+        .overlay{
+            display: flex;
+            justify-content: center;
         }
     }
 }
@@ -1455,8 +1499,7 @@ margin-right: 20px;
              margin-bottom: 20px;
          }
          .party{
-            display: flex;
-            justify-content: center;
+          
             height: 359px;
             width: 233px;
              margin-left: 0px;
@@ -1467,6 +1510,10 @@ margin-right: 20px;
             }
              .two{
                 display: none;
+            }
+            .overlay{
+                display: flex;
+                justify-content: center;
             }
          }
 
@@ -1494,8 +1541,7 @@ margin-right: 20px;
 
 
          .camera{
-            display: flex;
-            justify-content: center;
+          
             margin-left: 0px;
             object-fit: cover;
             height: 359px;
@@ -1506,6 +1552,10 @@ margin-right: 20px;
             }
             .two{
                 display: none;
+            }
+            .overlay{
+                display: flex;
+                justify-content: center;
             }
          }
      }
@@ -1933,8 +1983,6 @@ margin-right: 20px;
                  margin-bottom: 20px;
              }
              .party{
-                display: flex;
-                justify-content: center;
                 height: 370px;
                 width:240px;
                  margin-left: 0px;
@@ -1945,6 +1993,11 @@ margin-right: 20px;
                     font-size: 23px;
                 }
                  .two{display: none;}
+
+                 .overlay{
+                    display: flex;
+                    justify-content: center;
+                 }
              }
              .digital{
                 height:370px;
@@ -1969,8 +2022,7 @@ margin-right: 20px;
              }
 
              .camera{
-                display: flex;
-                justify-content: center;
+              
                 height: 370px;
                 width: 240px;
                 margin-left: 0px;
@@ -1982,6 +2034,11 @@ margin-right: 20px;
                
              .two{
 display: none;
+             }
+
+             .overlay{
+                display: flex;
+                justify-content: center;
              }
 
              }
